Add first test phys guide file

--- a/doc/phys/madphysguide.tex
+++ b/doc/phys/madphysguide.tex
@@ -5,8 +5,9 @@
 
 \setlength{\parindent}{4em}
 \setlength{\parskip}{1em}
-%\renewcommand{\baselinestretch}{2.0}
+\renewcommand{\baselinestretch}{1.5}
 
+\usepackage[yyyymmdd,hhmmss]{datetime}
 %subsubsubsection
 \newcommand{\subsubsubsection}[1]{\vskip10pt{\noindent\normalsize{\bf {#1}}}\vskip10pt}
 %symbols
@@ -24,8 +25,8 @@
 	{\large CERN}\\
 	{\includegraphics{images.jpg}}
 }
-\author{I. Tecker, L. Deniau}
-\date{18 Feb 2015}
+\author{I. Tecker, L. Deniau etc....} 
+\date{\ddmmyyyydate\today}
 \maketitle
 \thispagestyle{empty}
 
